--- a/page/catalog/catalog.wxml
+++ b/page/catalog/catalog.wxml
@@ -2,7 +2,11 @@
     <view class='conlumn'>
         <navigator url="/pages/goods/goods" hover-class='none'>
             <image src='../../img/repair-bg.png' class='nav-pic'>
-                <view class='icon-wrap' bindtap='getAttributeList' data-index="attributeList">
+                <view class='icon-wrap' wx:if='{{581 == admin}}' bindtap='getAttributeList' data-index="attributeList">
+                    <image src='../../img/guanjian.png'></image>
+                    <view>设备属性列表显示</view>
+                </view>
+                <view class='icon-wrap' wx:else data-index="attributeList">
                     <image src='../../img/guanjian.png'></image>
                     <view>设备属性列表显示</view>
                 </view>
@@ -10,7 +14,11 @@
         </navigator>
         <navigator url='/pages/groupList/groupList' hover-class='none'>
             <image src='../../img/check-bg.png' class='nav-pic'>
-                <view class='icon-wrap' bindtap='getScancode' data-index="attribute">
+                <view class='icon-wrap' wx:if='{{581 == admin}}' bindtap='getScancode' data-index="attribute">
+                    <image src='../../img/santong.png'></image>
+                    <view>录入设备属性信息</view>
+                </view>
+                <view class='icon-wrap' wx:else data-index="attribute">
                     <image src='../../img/santong.png'></image>
                     <view>录入设备属性信息</view>
                 </view>
@@ -20,7 +28,11 @@
     <view class='conlumn'>
         <navigator url="/pages/goods/goods" hover-class='none'>
             <image src='../../img/shop-bg.png' class='nav-pic'>
-                <view class='icon-wrap' bindtap='getScancode' data-index="check">
+                <view class='icon-wrap' wx:if='{{582 == check}}' bindtap='getScancode' data-index="check">
+                    <image src='../../img/gangmao.png'></image>
+                    <view>录入设备点检结果</view>
+                </view>
+                <view class='icon-wrap' wx:else data-index="check">
                     <image src='../../img/gangmao.png'></image>
                     <view>录入设备点检结果</view>
                 </view>
@@ -28,7 +40,11 @@
         </navigator>
         <navigator url='/pages/groupList/groupList' hover-class='none'>
             <image src='../../img/activity-bg.png' class='nav-pic'>
-                <view class='icon-wrap' bindtap='getCheckList' data-index="checkList">
+                <view class='icon-wrap' wx:if='{{582 == check}}' bindtap='getCheckList' data-index="checkList">
+                    <image src='../../img/famen.png'></image>
+                    <view>查看点检结果信息</view>
+                </view>
+                <view class='icon-wrap' wx:else data-index="checkList">
                     <image src='../../img/famen.png'></image>
                     <view>查看点检结果信息</view>
                 </view>
@@ -38,7 +54,11 @@
     <view class='conlumn'>
         <navigator url='/pages/house/house' hover-class='none'>
             <image src='../../img/home-bg.png' class='nav-pic'>
-                <view class='icon-wrap' bindtap='getScancode' data-index="repair">
+                <view class='icon-wrap' wx:if='{{583 == repair}}' bindtap='getScancode' data-index="repair">
+                    <image src='../../img/shebei.png'></image>
+                    <view>设备故障信息显示</view>
+                </view>
+                <view class='icon-wrap' wx:else data-index="repair">
                     <image src='../../img/shebei.png'></image>
                     <view>设备故障信息显示</view>
                 </view>
@@ -46,7 +66,11 @@
         </navigator>
         <navigator url='/pages/teamBuy/teamBuy' hover-class='none'>
             <image src='../../img/online-bg.png' class='nav-pic'>
-                <view class='icon-wrap' bindtap='getRepairList' data-index="repairList">
+                <view class='icon-wrap' wx:if='{{583 == repair}}' bindtap='getRepairList' data-index="repairList">
+                    <image src='../../img/shebei1.png'></image>
+                    <view>查看故障维修情况</view>
+                </view>
+                <view class='icon-wrap' wx:else data-index="repairList">
                     <image src='../../img/shebei1.png'></image>
                     <view>查看故障维修情况</view>
                 </view>
