--- a/page/login/login.wxml
+++ b/page/login/login.wxml
@@ -1,11 +1,12 @@
-<!--pages/login/login.wxml-->
 <view class="login">
     <image src="../../img/logo.png" ></image>
     <form bindsubmit="formSubmit" bindreset="formReset">
         <view class="section">
-            <input name="userName" class="{{ userName == true ? 'userError' : ''}}" type="text" auto-focus maxlength="11" placeholder="请输入用户名" value="vappadmin" />
-            <input name="userPassword" class="{{ userPassword == true ? 'userError' : ''}}" type="text" password  maxlength="100" placeholder="请输入密码" value="meideadmin" />
+            <input name="userName" class="{{ userName == true ? 'userError' : ''}}" type="text" auto-focus maxlength="20" placeholder="请输入用户名" value="" />
         </view>
-        <button type="default" formType="submit" hover-class="other-button-hover"> 登录 </button>
+        <view>
+            <input name="userPassword" class="{{ userPassword == true ? 'userError' : ''}}" type="text" password  maxlength="100" placeholder="请输入密码" value="" />
+        </view>
+        <button type="primary" class='bottom' formType="submit" hover-class="other-button-hover"> 登录 </button>
     </form>
 </view>
