--- a/page/attribute/pages/attributeAdd/attributeAdd.wxss
+++ b/page/attribute/pages/attributeAdd/attributeAdd.wxss
@@ -1,47 +1,159 @@
-.weui-label {
-  font-weight: bold;
-}
-.hidden {
-  display: none;
+.mt20{
+  margin-top: 20rpx;
 }
 
-.add-btn{
+.add-page{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  font-size: 32rpx;
+  color: #676767;
+  padding: 30rpx 0;
+}
+
+.mod-a{
+  padding: 0 10rpx;
+  border: 1px solid #f0f0f0;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 5px 5px 10px 5px;
+  font-size: 32rpx;
+}
+
+.mod{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  margin: 50rpx 26rpx 0;
-  height: 80rpx;
-  color: #fff;
-  background-color: #2fcc85;
-  border-radius: 10rpx;
+  height: 110rpx;
+  padding: 0 20rpx;
 }
 
-.radio-group label {
-  display: block;
-  height: 86rpx;
-  line-height: 86rpx;
-  /* border-bottom: 1rpx solid #e2e2e2; */
-  box-sizing: border-box;
+.arrow-r{
+  width: 9rpx;
+  height: 17rpx;
+  margin-left: 10rpx;
+}
+.arrow-d{
+  width: 17rpx;
+  height: 9rpx;
+  margin-left: 10rpx;
 }
 
-/* 单选框未选中 */
-radio .wx-radio-input {
-  width: 44rpx;
-  height: 44rpx;
-  border-radius: 100%;
-  color: black;
-  border: 2rpx solid #666;
+.value{
+  color: #b2b2b2;
 }
-
-/* 单选框选中后对勾样式 */
-radio .wx-radio-input.wx-radio-input-checked::before{
-  border-radius: 100%;
-  width: 60rpx;
+.t-sign-time .value{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.t-early .value{
+  padding-right: 20rpx;
+}
+.t-name .input, .t-address .value{
+  text-align: right;
+  width: 510rpx;
+  overflow: hidden;
+  color: #b2b2b2;
   height: 60rpx;
-  line-height: 44rpx;
+}
+
+.input {
+  text-align: right;
+  width: 215px;
+}
+
+.t-address, .t-sign-time, .t-time{
+  border-bottom: 3px solid #f0f0f0;
+}
+
+.t-time{
+  justify-content:space-around;
+}
+.start, .end{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.pipe{
+  height: 48rpx;
+  border-left: 1px solid #f0f0f0;
+}
+.date{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 10rpx;
+  color: #2fcc85;
+}
+.week{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: center;
+}
+.week .d{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 48rpx;
+  height: 48rpx;
+  border-radius: 50%;
+  background-color: #b2b2b2;
   text-align: center;
-  font-size: 60rpx;   
-  color:black;
-  /* background-color: green; */
-  border-color: green;
+  color: #fff;
+  margin: 0 15rpx;
+}
+.week .on{
+  background-color: #2fcc85;
+}
+.create{
+  margin-top: 80rpx;
+  padding: 0 26rpx;
+}
+.create .btn{
+  height: 80rpx;
+  line-height: 45rpx;
+  background-color: #2fcc85;
+  color: #fff;
+  margin-bottom: 30px;
+}
+.create .button-hover{
+  background-color: #2caf6d;
+  color: #aadfc4;
+}
+
+.create .disabled{
+  opacity: 0.4
+}
+
+radio {
+  transform: scale(0.7);
+}
+
+.top {
+  background-color: lightslategrey;
+}
+
+checkbox-group {
+  height: 130rpx;
+}
+
+.checkbox {
+  margin-top: 40rpx;
+  transform: scale(0.9);
+}
+
+.agreement-box checkbox .wx-checkbox-input {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.agreement-box checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  background: green;
+}
+
+.agreement-box checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
+  font-size: 40rpx;
+  color: #ffffff;
 }
