--- a/page/check/pages/checkAdd/checkAdd.wxss
+++ b/page/check/pages/checkAdd/checkAdd.wxss
@@ -1,190 +1,188 @@
-/**index.wxss**/
-page{
-  background-color: #acacac;
+.mt20{
+  margin-top: 20rpx;
 }
- .table {
-   border-bottom: 0;
-   width: 100%;
- }
- .tr {
-   width: 100%;
-   display: flex;
-   justify-content: space-between;
- }
- .td {
-   border: 0px solid #dadada;
-   text-align: left;
-   margin-left: -150rpx;
-   /* width:80%; */
- }
 
- .th {
-   font-weight: bold;
-   width:60%
- }
-
-.date-text {
+.add-page{
+  display: flex;
+  flex-direction: column;
   font-size: 32rpx;
-  padding: 20rpx 10rpx;
-  text-align: center;
+  color: #676767;
+  padding: 30rpx 0;
 }
 
-.title-wrapper {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  padding: 20rpx;
-  box-sizing: border-box;
-}
-
-.table-wrapper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  border-top: 1rpx solid #DCDFE6;
-}
-
-.row1 {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.mod-a{
+  padding: 0 10rpx;
+  border: 1px solid #f0f0f0;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 5px 5px 10px 5px;
   font-size: 32rpx;
-  box-sizing: border-box;
-  border-top: 1rpx solid #DCDFE6;
-  border-bottom: 1rpx solid #DCDFE6;
 }
 
-.text {
-  flex: 4;
-  padding: 0rpx;
-  line-height: 60rpx;
-  display: flex;
-  align-items: center;
-  height: 150rpx;
-}
-
-.column2-wrapper {
-  display: flex;
-  flex-direction: column;
-  flex: 3;
-  justify-content: center;
-  border-left: 1rpx solid #DCDFE6;
-  text-align: center;
-}
-
-.column2 {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  border-bottom: 1rpx solid #DCDFE6;
-}
-
-.column2:last-child{
-  border-bottom: none;
-}
-
-.column3-wrapper {
-  display: flex;
-  flex-direction: column;
-  flex: 2;
-  justify-content: center;
-  border-left: 1rpx solid #DCDFE6;
-  text-align: center;
-}
-
-/*checkbox 选项框大小  */
-.agreement-box checkbox .wx-checkbox-input {
-  width: 40rpx;
-  height: 40rpx;
-}
-/*checkbox选中后样式  */
-.agreement-box checkbox .wx-checkbox-input.wx-checkbox-input-checked {
-  background: green;
-}
-/*checkbox选中后图标样式  */
-.agreement-box checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
-  font-size: 40rpx;
-  color: #ffffff;
-}
-
-.column3 {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  border-bottom: 1rpx solid #DCDFE6;
-}
-
-.column3:last-child{
-  border-bottom: none;
-}
-
-.column-value{
-  display: flex;
-  align-self: flex-end;
-  margin-right: 10rpx;
-  padding: 10rpx;
-  line-height: 60rpx;
-  /*height: 60rpx;*/
-  flex: 2
-}
-
-.column4-wrapper{
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  justify-content: center;
-  border-left: 1rpx solid #DCDFE6;
-}
-
-.picker-content{
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 1rpx solid rgba(7, 17, 27, 0.1);
-}
-
-.date-icon{
-  width: 80rpx;
-  height: 80rpx;
-}
-
-.nodata{
-  width: 100%;
-  text-align: center;
-  font-size: 32rpx;
-  color: #666;
-  padding: 20rpx;
-}
-
-.input{
-  width: 100%;
-  border: 1px solid greenyellow;
-  height: 2em;
-  align-items: center;
-}
-
-.add-btn{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 50rpx 26rpx 0;
-  height: 80rpx;
-  color: #fff;
-  background-color: #2fcc85;
-  border-radius: 10rpx;
-}
 .mod{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  height: 110rpx;
   padding: 0 20rpx;
-  min-height: 90rpx;
 }
 
-.time{
-  color: #DCDFE6;
+.arrow-r{
+  width: 9rpx;
+  height: 17rpx;
+  margin-left: 10rpx;
+}
+.arrow-d{
+  width: 17rpx;
+  height: 9rpx;
+  margin-left: 10rpx;
+}
+
+.value{
+  color: #b2b2b2;
+}
+.t-sign-time .value{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.t-early .value{
+  padding-right: 20rpx;
+}
+.t-name .input, .t-address .value{
+  text-align: right;
+  width: 510rpx;
+  overflow: hidden;
+  color: #b2b2b2;
+  height: 60rpx;
+}
+
+.input {
+  text-align: right;
+  width: 215px;
+}
+
+.t-address, .t-sign-time, .t-time{
+  border-bottom: 3px solid #f0f0f0;
+}
+
+.t-time{
+  justify-content:space-around;
+}
+.start, .end{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.pipe{
+  height: 48rpx;
+  border-left: 1px solid #f0f0f0;
+}
+.date{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 10rpx;
+  color: #2fcc85;
+}
+.week{
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: center;
+}
+.week .d{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 48rpx;
+  height: 48rpx;
+  border-radius: 50%;
+  background-color: #b2b2b2;
+  text-align: center;
+  color: #fff;
+  margin: 0 15rpx;
+}
+.week .on{
+  background-color: #2fcc85;
+}
+.create{
+  margin-top: 80rpx;
+  padding: 0 26rpx;
+}
+.create .btn{
+  height: 80rpx;
+  line-height: 45rpx;
+  background-color: #2fcc85;
+  color: #fff;
+  margin-bottom: 30px;
+  border-radius: 20rpx;
+}
+.create .button-hover{
+  background-color: #2caf6d;
+  color: #aadfc4;
+}
+
+.create .disabled{
+  opacity: 0.4
+}
+
+radio {
+  transform: scale(0.7);
+}
+
+.top {
+  background-color: lightslategrey;
+}
+
+checkbox-group {
+  height: 130rpx;
+}
+
+.checkbox {
+  margin-top: 40rpx;
+  transform: scale(0.9);
+}
+
+.agreement-box checkbox .wx-checkbox-input {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.agreement-box checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  background: green;
+}
+
+.agreement-box checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
+  font-size: 40rpx;
+  color: #ffffff;
+}
+
+camera {
+  width: 95%;
+  height: 200px;
+  margin-left: 10px;
+  border-radius: 10px;
+}
+
+.preview-img {
+  width: 95%;
+  height: 200px;
+  margin: 0px 0px 10px 10px;
+  border-radius: 10px;
+}
+
+.preview-tips {
+  margin: 20rpx 0;  
+}
+
+.video {
+  margin: 50px auto;
+  width: 100%;
+  height: 300px;
+}
+
+.btn-area {
+  margin-top: 10px;
 }
