--- a/page/catalog/pages/mulu/mulu.wxml
+++ b/page/catalog/pages/mulu/mulu.wxml
@@ -1,18 +1,18 @@
 <view class='nav'>
   <view class='conlumn'>
-    <navigator url="/page/inspection/pages/inspectionList/inspectionList" hover-class='navigator-hover'>
+    <navigator url="{{url1}}" hover-class='navigator-hover'>
       <image src='../../../../img/repair-bg.png' class='nav-pic'>
         <view class='icon-wrap'>
-          <view>验货列表</view>
+          <view>{{name1}}</view>
         </view>
       </image>
     </navigator>
   </view>
   <view class='conlumn'>
-    <navigator url="/page/inspection/pages/inspection/inspection?flag=N" hover-class='none'>
+    <navigator url="{{url2}}" hover-class='none'>
       <image src='../../../../img/check-bg.png' class='nav-pic'>
         <view class='icon-wrap'>
-          <view>产品验货</view>
+          <view>{{name2}}</view>
         </view>
       </image>
     </navigator>
