--- a/page/container/pages/loadingList/loadingList.wxss
+++ b/page/container/pages/loadingList/loadingList.wxss
@@ -10,6 +10,10 @@
 }
 
 .row-first {
+  float: right;
+}
+
+.color {
   color: orange;
 }
 
@@ -147,20 +151,109 @@
   color: #333;
 }
 
-.c-row {
-  margin-right: 80px;
+.warning {
+  background-color: rgb(247, 81, 81);
 }
 
-textarea {
-  width: 95%;
-  margin: 0px 0px 15px 8px;
-  border-radius: 5px;
-  background: #def0effd;
-  height: 100px;
+.picker_group {
+  height: 85rpx;
+  line-height: 85rpx;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-size: 30rpx;
+  color: #888;
+  border-bottom: 1rpx solid #efefef;
+}
+
+.picker_group picker {
+  /* background-color: yellow; */
+  color: #64bff1;
+  height: 55rpx;
+  line-height: 55rpx;
+  margin: 0 3%;
+  padding: 0 3%;
+  border: 1rpx solid #64bff1;
+  border-radius: 20rpx;
+}
+
+.search-bar {
+  position: relative;
+  width: 94%;
+  margin: 0 auto;
+  height: 60rpx;
+  line-height: 60rpx;
+  border-radius: 30rpx;
+  background-color: #fff;
+  margin-top: 10rpx;
+  border: 1px solid darkgray;
+}
+
+.search-bar .input {
+  font-size: 30rpx;
+  color: #999;
+}
+
+.search-bar input {
+  margin-left: 65rpx; 
+  font-size: 30rpx;
+  height: 60rpx
+}
+
+.search-bar image {
+  position: absolute;
+  left: 3%;
+  top: 13rpx;
+  width: 30rpx;
+  height: 34rpx;
+}
+
+.checkbox {
+  margin-top: 30px;
+  float: right;
+}
+
+/*checkbox 选项框大小  */
+checkbox .wx-checkbox-input {
+  width: 50rpx;
+  height: 50rpx;
+}
+/*checkbox选中后样式  */
+checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  background: rgba(82, 240, 61, 0.719);
+}
+/*checkbox选中后图标样式  */
+checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
+  width: 25rpx;
+  height: 25rpx;
+  line-height: 25rpx;
+  text-align: center;
+  font-size: 40rpx;
+  color: #fff;
+  background: transparent;
+  transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+}
+
+.img {
+  float: right;
+  position: fixed;
+  bottom: 200rpx;
+  right: 40rpx; 
+  width: 200rpx;
+  height: 200rpx;
 }
 .preview-img {
   width: 95%;
   height: 200px;
   margin: 0px 0px 10px 10px;
   border-radius: 10px;
+}
+
+textarea {
+  width: 100%;
+  margin: 0px 0px 0px 8px;
+  border-radius: 5px;
+  background: #def0effd;
+  height: 80px;
 }
