--- a/page/container/pages/loadingList/loadingList.wxml
+++ b/page/container/pages/loadingList/loadingList.wxml
@@ -37,5 +37,9 @@
       </view>
     </view>
   </block>
+    <view bindtouchmove="tap_drag" bindtouchend="tap_end" bindtouchstart="tap_start" class="page-top {{open ? 'c-state1' : ''}}">
+        <image bindtap="tap_ch" src="../../../../img/btn.png"></image>
+        <view class="text">{{name1}}</view>
+    </view>
 </scroll-view>
 <image src="../../../../img/top.png" style="width: 40px; height: 40px; position: fixed; right: 40px; bottom: 40px;" bindtap="goTop" wx:if="{{visual}}" class="{{animation}}" />
