--- a/page/quality/pages/qualityInfo/qualityInfo.wxss
+++ b/page/quality/pages/qualityInfo/qualityInfo.wxss
@@ -29,9 +29,9 @@
 }
 
 .arrow-r{
-  width: 20rpx;
-  height: 28rpx;
-  margin-left: 20rpx;
+  width: 9rpx;
+  height: 17rpx;
+  margin-left: 10rpx;
 }
 .arrow-d{
   width: 17rpx;
@@ -61,6 +61,12 @@
 .input {
   text-align: right;
   width: 215px;
+}
+
+.put {
+  background: #def0effd;
+  border-radius: 0.5rem;
+  height: 80rpx;
 }
 
 .t-address, .t-sign-time, .t-time{
@@ -108,17 +114,16 @@
   background-color: #2fcc85;
 }
 .create{
-  margin: 40rpx 0rpx 40rpx 0 rpx;
+  margin-top: 80rpx;
   padding: 0 26rpx;
 }
 .create .btn{
   height: 80rpx;
   line-height: 45rpx;
-  /* margin-bottom: 30px; */
   background-color: #2fcc85;
   color: #fff;
-  width: 130px;
-  margin-right: 0px;
+  margin-bottom: 30px;
+  border-radius: 20rpx;
 }
 .create .button-hover{
   background-color: #2caf6d;
@@ -160,26 +165,10 @@ checkbox-group {
   color: #ffffff;
 }
 
-textarea {
-  width: 100%;
-  margin: 0px 0px 0px 8px;
-  border-radius: 5px;
-  background: #def0effd;
-  height: 80px;
-}
-
-.order {
-  height: 100px;
-}
-
-.key {
-  width: 300rpx;
-}
-
 camera {
-  /* width: 95%; */
-  height: 300px;
-  /* margin-left: 10px; */
+  width: 95%;
+  height: 200px;
+  margin-left: 10px;
   border-radius: 10px;
 }
 
@@ -204,9 +193,15 @@ camera {
   margin-top: 10px;
 }
 
+.arrow-r{
+  width: 20rpx;
+  height: 28rpx;
+  margin-left: 20rpx;
+}
+
 .addpic {
-  width: 130rpx;
-  height: 130rpx;
+  width: 300rpx;
+  height: 240rpx;
   margin: 0px 10px 10px 10px;
 }
 
@@ -222,10 +217,6 @@ camera {
   height:25px;
   width:25px;
   position:relative;
-  top:-80px;
-  left:55px;
- }
-
- .upload {
-  float: left;
- }
+  top:-150px;
+  left:150px;
+}
